--- a/buzzle/package.json
+++ b/buzzle/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material/textfield": "^7.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "emailjs-com": "^2.6.3",
     "i": "^0.3.6",
     "node-sass": "^4.14.1",
     "npm": "^6.14.8",
