added wave and product

--- a/buzzle/package.json
+++ b/buzzle/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "aos": "^3.0.0-beta.6",
     "emailjs-com": "^2.6.3",
     "i": "^0.3.6",
     "node-sass": "^4.14.1",
@@ -15,8 +16,12 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-mt-svg-lines": "^0.9.1",
+    "react-rellax": "^1.0.3",
     "react-scripts": "4.0.0",
+    "react-scroll-parallax": "^2.3.4",
+    "react-scrollmagic": "^2.2.0",
     "react-svg": "^11.1.0",
+    "scroll-background": "^1.0.5",
     "styled-components": "^5.2.0",
     "web-vitals": "^0.2.4"
   },
